cyber-city-frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyber-city-frontend
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: cyber-city-frontend
  template:
    metadata:
      labels:
        app: cyber-city-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: frontend
          image: registry.cyber-safekids.com/safecommu/cyber-city-frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "500m"
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: next-cache
              mountPath: /app/.next/cache
      volumes:
        - name: tmp
          emptyDir: {}
        - name: next-cache
          emptyDir: {}
