cyber-city-frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyber-city-frontend
spec:
  selector:
    app: cyber-city-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
